--- a/index.html
+++ b/index.html
@@ -8,5 +8,29 @@
 </head>
 <body>
   <h1>Frog tinder</h1>
+  <h3>Найди свой краш!</h3>
+<form action="" method="get">
+  <p>I am:</p>
+  <input type="radio" name="I-am" id="male-input" value="Male">
+  <label for="male-input">Male</label>
+  <input type="radio" name="I-am" id="female-input" value="Female">
+  <label for="female-input">Female</label>
+  <input type="radio" name="I-am" id="frog-input" value="Frog">
+  <label for="frog-input">Frog</label>
+
+  <p>Interested in</p>
+  <input type="radio" name="I-am" id="man-input" value="Man">
+  <label for="man-input">Man</label>
+  <input type="radio" name="I-am" id="woman-input" value="Woman">
+  <label for="woman-input">Woman</label>
+  <input type="radio" name="I-am" id="eat-bug-input" value="Eat-bug">
+  <label for="eat-bug-input">Eat bug</label>
+  <br>
+  <button type="submit">Send</button>
+
+
+
+</form>
+
 </body>
 </html>
