--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <label for="frog-input">Frog</label>
 
   <p>Interested in</p>
-  <input type="radio" name="I-am" id="man-input" value="Man">
+  <input type="radio" name="Interested-in" id="man-input" value="Man">
   <label for="man-input">Man</label>
-  <input type="radio" name="I-am" id="woman-input" value="Woman">
+  <input type="radio" name="Interested-in" id="woman-input" value="Woman">
   <label for="woman-input">Woman</label>
-  <input type="radio" name="I-am" id="eat-bug-input" value="Eat-bug">
+  <input type="radio" name="Interested-in" id="eat-bug-input" value="Eat-bug">
   <label for="eat-bug-input">Eat bug</label>
   <br>
   <button type="submit">Send</button>
